--- a/apps/public/includes/header.phtml
+++ b/apps/public/includes/header.phtml
@@ -10,7 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="<?= URL?>assets/img/favicon.png" rel="icon">
+    <!-- <link href="<?= URL?>assets/img/favicon.png" rel="icon"> -->
     <link href="<?= URL?>assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -42,7 +42,7 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo mr-auto"><a href="<?= URL ?>">Pentecost IT Guild</a></h1>
+            <h1 class="logo mr-auto"><a href="<?= URL ?>">ASASE BUSINESS SOLUTION</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -53,7 +53,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
-                    <li class="drop-down"><a href="">Drop Down</a>
+                    <!-- <li class="drop-down"><a href="">Drop Down</a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
                             <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -69,7 +69,7 @@
                             <li><a href="#">Drop Down 3</a></li>
                             <li><a href="#">Drop Down 4</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li><a href="#contact">Contact</a></li>
 
                 </ul>
